--- a/scss/component/_button-group.scss
+++ b/scss/component/_button-group.scss
@@ -14,6 +14,7 @@
 
     > .btn {
         position: relative;
+        margin-bottom: 0;
 
         @if not $enable-flex-full {
             float: left;
