--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -313,11 +313,8 @@ input,
 button,
 select,
 textarea {
-    // Remove all `margin`s so our classes don't have to do it themselves.
-    margin: 0;
     // Normalize includes `font: inherit;`, so `font-family`. `font-size`, etc are
-    // properly inherited. However, `line-height` isn't addressed there. Using this
-    // ensures we don't need to unnecessarily redeclare the global font stack.
+    // properly inherited. However, `line-height` isn't addressed there.
     line-height: inherit;
     // iOS adds rounded borders by default
     border-radius: 0;
