--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -22,7 +22,10 @@
     // Prevent Chrome on Windows from adding a focus outline. For details, see
     // https://github.com/twbs/bootstrap/pull/10951.
     outline: 0;
-    -webkit-overflow-scrolling: touch;
+    // Don't use `-webkit-overflow-scrolling: touch;` due to a
+    // iOS Safari bug: https://bugs.webkit.org/show_bug.cgi?id=158342
+    // See also https://github.com/twbs/bootstrap/issues/17695
+    //-webkit-overflow-scrolling: touch;
 
     // When fading in the modal, animate it to slide down
     &.fade .modal-dialog {
