--- a/scss/utilities/_display.scss
+++ b/scss/utilities/_display.scss
@@ -1,32 +1,16 @@
 // scss-lint:disable ImportantRule
 
 // Display utilities
-.display-block {
-    display: block !important;
-}
-.display-inline-block {
-    display: inline-block !important;
-}
-.display-inline {
-    display: inline !important;
-}
-.display-flex {
-    display: flex !important;
-}
-.display-table {
-    display: table !important;
-}
-.display-table-cell {
-    display: table-cell !important;
-}
-
 @each $breakpoint in map-keys($grid-breakpoints) {
+    $bprule: breakpoint-designator($breakpoint);
+
     @include media-breakpoint-up($breakpoint) {
-        .display-#{$breakpoint}-block { display: block !important; }
-        .display-#{$breakpoint}-inline-block { display: inline-block !important; }
-        .display-#{$breakpoint}-inline { display: inline !important; }
-        .display-#{$breakpoint}-flex { display: flex !important; }
-        .display-#{$breakpoint}-table { display: table !important; }
-        .display-#{$breakpoint}-table-cell { display: table-cell !important; }
+        .display#{$bprule}-none { display: none !important; }
+        .display#{$bprule}-block { display: block !important; }
+        .display#{$bprule}-flex { display: flex !important; }
+        .display#{$bprule}-inline-block { display: inline-block !important; }
+        .display#{$bprule}-inline { display: inline !important; }
+        .display#{$bprule}-table { display: table !important; }
+        .display#{$bprule}-table-cell { display: table-cell !important; }
     }
 }
