--- a/scss/utilities/_text.scss
+++ b/scss/utilities/_text.scss
@@ -1,18 +1,17 @@
 // scss-lint:disable ImportantRule, SpaceBeforeBrace
 
 // Alignment
-.text-left           { text-align: left; }
-.text-right          { text-align: right; }
-.text-center         { text-align: center; }
-.text-justify        { text-align: justify; }
-.text-nowrap         { white-space: nowrap; }
+.text-justify { text-align: justify; }
+.text-nowrap  { white-space: nowrap; }
 
 // Responsive alignment
 @each $breakpoint in map-keys($grid-breakpoints) {
+    $bprule: breakpoint-designator($breakpoint);
+
     @include media-breakpoint-up($breakpoint) {
-        .text-#{$breakpoint}-left   { text-align: left !important; }
-        .text-#{$breakpoint}-right  { text-align: right !important; }
-        .text-#{$breakpoint}-center { text-align: center !important; }
+        .text#{$bprule}-left    { text-align: left !important; }
+        .text#{$bprule}-right   { text-align: right !important; }
+        .text#{$bprule}-center  { text-align: center !important; }
     }
 }
 
