--- a/scss/utilities/_gridline.scss
+++ b/scss/utilities/_gridline.scss
@@ -9,22 +9,20 @@
 }
 
 @each $breakpoint in map-keys($grid-breakpoints) {
+    $bprule: breakpoint-designator($breakpoint);
+
     @include media-breakpoint-up($breakpoint) {
-
         // Horizontal lines
-        .gridline-#{$breakpoint}-hr {
-            border-bottom: $gridline-border-width solid $gridline-border-color;
+        .gridline#{$bprule}-hr {
+            border-top: $gridline-border-width solid $gridline-border-color;
+        }
 
-            @each $bpinner in map-keys($grid-breakpoints) {
-                + .gridline-#{$bpinner}-hr {
-                    border-bottom: 0;
-                }
-            }
-
+        .gridline#{$bprule}-hr:first-child {
+            border-top: 0;
         }
 
         // Vertical lines
-        .gridline-#{$breakpoint}-vr {
+        .gridline#{$bprule}-vr {
             @if $enable-flex-full {
                 display: flex;
             } @else {
@@ -47,7 +45,7 @@
         }
 
         @if $enable-flex-opt {
-            .gridline-flex.gridline-#{$breakpoint}-vr {
+            .gridline-flex.gridline#{$bprule}-vr {
                 display: flex;
 
                 > .gridline-item {
