--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -217,37 +217,39 @@
 
 // Card deck gutters
 @each $breakpoint, $gutter in $card-deck-gutter-widths {
-    @include media-breakpoint-up($breakpoint) {
-        @if $enable-flex-full {
-            .card-deck .card {
-                margin-right: ($gutter / 2);
-                margin-left: ($gutter / 2);
-            }
-
-            .card-deck-wrapper {
-                margin-right: ($gutter / -2);
-                margin-left: ($gutter / -2);
-            }
-        } @else {
-            .card-deck {
-                border-spacing: $gutter 0;
-            }
-            .card-deck-wrapper {
-                margin-right: (-$gutter);
-                margin-left: (-$gutter);
-            }
-
-            @if $enable-flex-opt {
-                .card-deck-flex .card {
+    @include check-gutter-change($breakpoint, $card-deck-gutter-widths) {
+        @include media-breakpoint-up($breakpoint) {
+            @if $enable-flex-full {
+                .card-deck .card {
                     margin-right: ($gutter / 2);
                     margin-left: ($gutter / 2);
                 }
 
-                .card-deck-wrapper .card-deck-flex {
-                    padding-right: ($gutter / 2);
-                    padding-left: ($gutter / 2);
+                .card-deck-wrapper {
+                    margin-right: ($gutter / -2);
+                    margin-left: ($gutter / -2);
+                }
+            } @else {
+                .card-deck {
+                    border-spacing: $gutter 0;
+                }
+                .card-deck-wrapper {
+                    margin-right: (-$gutter);
+                    margin-left: (-$gutter);
                 }
 
+                @if $enable-flex-opt {
+                    .card-deck-flex .card {
+                        margin-right: ($gutter / 2);
+                        margin-left: ($gutter / 2);
+                    }
+
+                    .card-deck-wrapper .card-deck-flex {
+                        padding-right: ($gutter / 2);
+                        padding-left: ($gutter / 2);
+                    }
+
+                }
             }
         }
     }
