--- a/scss/mixins/_breakpoints.scss
+++ b/scss/mixins/_breakpoints.scss
@@ -6,6 +6,19 @@
 //
 // The map defined in the `$grid-breakpoints` global variable is used as the `$breakpoints` argument by default.
 
+// Name of the previous breakpoint, or null for the first breakpoint.
+//
+//    >> breakpoint-prev(sm)
+//    xs
+//    >> breakpoint-prev(sm, (xs: 0, sm: 544px, md: 768px))
+//    xs
+//    >> breakpoint-prev(sm, $breakpoint-names: (xs sm md))
+//    xs
+@function breakpoint-prev($name, $breakpoints: $grid-breakpoints, $breakpoint-names: map-keys($breakpoints)) {
+    $n: index($breakpoint-names, $name);
+    @return if($n > 1, nth($breakpoint-names, $n - 1), null);
+}
+
 // Name of the next breakpoint, or null for the last breakpoint.
 //
 //    >> breakpoint-next(sm)
@@ -40,9 +53,10 @@
 }
 
 // String value for breakpoint class name designation.
+// Empty string returned for smallest (first) breakpoint, otherwise prepend '-' to breakpoint name.
 //
 //    >> breakpoint-designator(xs)
-//    `empty string`
+//    "" (empty string)
 //    >> breakpoint-designator(lg)
 //    -lg
 @function breakpoint-designator($name, $breakpoints: $grid-breakpoints) {
