--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -149,7 +149,7 @@
 
             // `$columns - 1` because offsetting by the width of an entire row isn't possible
             @for $i from 0 through ($columns - 1) {
-                @if $breakpoint-counter != 1 or $i != 0 { // Avoid emitting useless .offset-xs-0
+                @if $breakpoint-counter != 1 or $i != 0 { // Avoid emitting useless .offset-0
                     .offset#{$bprule}-#{$i} {
                         @include make-col-modifier(offset, $i, $columns);
                     }
