--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -563,6 +563,102 @@ h4 > code {
   padding: .5rem 1rem;
 }
 
+.docsearch {
+  width: 11rem;
+  padding-left: 1.5rem;
+}
+
+.docsearch-wrapper {
+  position: relative;
+  width: 11rem;
+  clear: both;
+}
+
+.docsearch-wrapper::before {
+  position: absolute;
+  top: 50%;
+  left: .25rem;
+  z-index: 1;
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  margin-top: -.5rem;
+  content: " ";
+  background: url("/assets/img/magnifying-glass.svg") no-repeat center;
+  -webkit-background-size: 1rem 1rem;
+          background-size: 1rem 1rem;
+}
+
+@media (min-width: 36em) {
+  .algolia-autocomplete .ds-dropdown-menu {
+    min-width: 450px;
+  }
+}
+
+.algolia-autocomplete .ds-dropdown-menu .ds-suggestions {
+  margin-top: 6px;
+  border-bottom: 1px solid #858585;
+}
+
+.algolia-autocomplete .ds-dropdown-menu .ds-suggestion.ds-cursor .algolia-docsearch-suggestion.suggestion-layout-simple,
+.algolia-autocomplete .ds-dropdown-menu .ds-suggestion.ds-cursor .algolia-docsearch-suggestion:not(.suggestion-layout-simple) .algolia-docsearch-suggestion--content {
+  background-color: rgba(69, 142, 225, 0.1);
+}
+
+.algolia-autocomplete .algolia-docsearch-suggestion {
+  padding: 0;
+}
+
+.algolia-autocomplete .algolia-docsearch-suggestion--category-header {
+  padding: 2px 6px;
+  margin-top: 0;
+  font-weight: bold;
+  color: #292929;
+  background-color: #a0cbe3;
+  border-top: 1px solid #858585;
+  border-bottom: 0;
+}
+
+.algolia-autocomplete .algolia-docsearch-suggestion--wrapper {
+  display: table !important;
+  padding: 0;
+}
+
+.algolia-autocomplete .algolia-docsearch-suggestion--subcategory-column {
+  display: table-cell !important;
+  float: none !important;
+  padding: 6px 10px;
+  color: #383838;
+  background-color: #f0f0f0;
+}
+
+.algolia-autocomplete .algolia-docsearch-suggestion--subcategory-column::before {
+  background: #858585;
+}
+
+.algolia-autocomplete .algolia-docsearch-suggestion--content {
+  display: table-cell !important;
+  float: none !important;
+  padding: 6px 10px;
+  background-color: #fff;
+}
+
+.algolia-autocomplete .algolia-docsearch-suggestion--content::before {
+  background: #858585;
+}
+
+.algolia-autocomplete .algolia-docsearch-suggestion--highlight {
+  background-color: rgba(143, 187, 237, 0.2);
+}
+
+.algolia-autocomplete .algolia-docsearch-suggestion--title {
+  margin-bottom: 0;
+}
+
+.algolia-autocomplete .algolia-docsearch-footer {
+  margin-top: 8px;
+}
+
 .cf-example-container {
   min-width: 16rem;
   max-width: 25rem;
