--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -121,9 +121,7 @@
 
 
 // Select
-// Replaces the browser default select with a custom one, mostly pulled from
-// http://primercss.io.
-//
+// Replaces the browser default select with a custom one.
 // Includes IE9-specific hacks (noted by ` \9`).
 .custom-select {
     display: block;
@@ -177,11 +175,15 @@
         $sz-input-height:  (($sz-font-size * $input-line-height) + ($sz-padding-y * 2));
         $sz-select-height: calc(#{$sz-input-height} + #{($border-width * 2)});
 
+        //scss-lint:disable DuplicateProperty
         .custom-select-#{$size} {
             height: $sz-select-height;
             padding: $sz-padding-y ($sz-padding-x / 2);
+            padding-right: ($sz-padding-x + $custom-select-indicator-padding);
+            padding-right: $custom-select-padding-x \9;
             font-size: $sz-font-size;
         }
+        //scss-lint:enable DuplicateProperty
     }
 }
 
