--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -514,9 +514,7 @@ $custom-checkbox-indeterminate-box-shadow:  none !default;
 $custom-radio-radius:               50% !default;
 $custom-radio-checked-icon:         url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E") !default;
 
-$custom-select-padding-y:           $input-padding-y !default;
-$custom-select-padding-x:           $input-padding-x !default;
-$custom-select-indicator-padding:   1rem !default; // Extra padding to account for the presence of the background-image based indicator
+$custom-select-indicator-padding:   .75rem !default; // Extra padding to account for the presence of the background-image based indicator
 $custom-select-color:               $input-color !default;
 $custom-select-disabled-color:      $text-muted !default;
 $custom-select-bg:                  $white !default;
@@ -533,13 +531,9 @@ $custom-select-focus-box-shadow:    inset 0 .0625rem .125rem rgba(0,0,0,.075), 0
 $custom-select-sm-padding-y:        .2rem !default;
 $custom-select-sm-font-size:        75% !default;
 
-$custom-file-height:                2.5rem !default;
 $custom-file-width:                 14rem !default;
 $custom-file-focus-box-shadow:      0 0 0 .075rem #fff, 0 0 0 .2rem map-get($context-colors, "primary") !default;
 
-$custom-file-padding-x:             .5rem !default;
-$custom-file-padding-y:             1rem !default;
-$custom-file-line-height:           1.5 !default;
 $custom-file-color:                 $uibase-600 !default;
 $custom-file-bg:                    $white !default;
 $custom-file-border-width:          $border-width !default;
